# thundering-birds

./: .env.template  .gitignore  LICENSE  Makefile  README.md  download_kaggle_dataset.py  pyproject.toml  pyvenv.cfg  requirements.txt
Scripts/: activate  activate.bat  jsonpointer  numba
src/: __init__.py  basic_pipeline.py  config.py  main.py
src/config/: __init__.py  config.py
src/data/: __init__.py  dataset.py  preprocessing.py
src/models/: __init__.py  efficientnet.py  efficientnet_attention.py  model_factory.py
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  logger.py  visualization.py
utils/: logger.py
