[tool.poetry]
name = "thundering-birds"
version = "0.1.0"
description = "BirdCLEF 2025 Competition"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.11"
python-dotenv = "*"
kaggle = "*"
tqdm = "*"
pandas = "*"
torch = "*"
matplotlib = "*"
librosa = "^0.10.1"
audiomentations = "*"
plotly = "*"
ipython = "*"
ipykernel = "*"
torchaudio = "*"
pytorch-lightning = "*"
timm = "*"
torch-audiomentations = "*"
transformers = "*"
colorednoise = "*"
albumentations = "^2.0.5"
opencv-python = "^4.11.0.86"
torch-optim = "^0.0.4"
torchmetrics = "^1.7.0"
wandb = "^0.19.8"
cupy-cuda12x = "^13.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
